2006-10-25  Roger While <simrw@sim-basis.de>

	* parser.y : Allow COBOL standard of INSPECT REPLACING
	  NOTE - TALLYING is still deficient

2006-10-23  Roger While <simrw@sim-basis.de>

	* Makefile.am : Remove gcc options
	  cobc.c : Check for .lib suffix on MSC compile

2006-10-18  Roger While <simrw@sim-basis.de>

	* typeck.c : Fix ODO subscript checking

2006-10-15  Roger While <simrw@sim-basis.de>

	* typeck.c : Use table for optimization
	* cobc.c : Compilation defines generated by codegen
	* codegen.c : Generate optimization defines

2006-10-14  Roger While <simrw@sim-basis.de>

	* scanner.l : Fix a problem with 78 level
	* tree.[ch] : Fix abort, clean up and new cb_fits_long_long

2006-09-30  Roger While <simrw@sim-basis.de>

	* codegen.c : Sergey's non-gcc fixes
	* parser.y : Fix an abort with ENTRY
	* general : clean up

2006-08-23  Roger While <simrw@sim-basis.de>

	* scanner.l, tree.c : Fix 78 levels

2006-08-11  Roger While <simrw@sim-basis.de>

	* parser.y, cobc.h, typeck.c : The target of an INSPECT can be
	  a FUNCTION/Literal provided there is only a TALLYING clause

2006-08-09  Roger While <simrw@sim-basis.de>

	* reserved.c : Fix wrong categories for some functions

2006-08-03  Roger While <simrw@sim-basis.de>

	* flags.def, codegen.c : -fimplicit-init, allow libraries
	  to be built.

2006-07-31  Roger While <simrw@sim-basis.de>

	* field.c : Fix COMP-X allocation

2006-07-28  Roger While <simrw@sim-basis.de>

	* scanner.l : Usage of 78 is allowed in PIC clauses
	* typeck.c : Allow 66 as CALL parameter

2006-07-26  Roger While <simrw@sim-basis.de>

	* All : clean up for gcc 4
	* tyepck.c, tree.[ch], codegen.c : System routines

2006-07-19  Roger While <simrw@sim-basis.de>

	* parser.y, typeck.c : Tighten up field checking
	* All : General clean up

2006-07-14  Roger While <simrw@sim-basis.de>

	* parser.y, field.c : Change EXTERNAL checking

2006-07-12  Roger While <simrw@sim-basis.de>
