@@ -145,12 +145,16 @@ redefinition_error (cb_tree x)
 }
 
 void
-redefinition_warning (cb_tree x)
+redefinition_warning (cb_tree x, cb_tree y)
 {
 	struct cb_word	*w = CB_REFERENCE (x)->word;
 
 	cb_warning_x (x, _("Redefinition of '%s'"), w->name);
-	cb_warning_x (CB_VALUE (w->items), _("'%s' previously defined here"), w->name);
+	if (y) {
+		cb_warning_x (y, _("'%s' previously defined here"), w->name);
+	} else {
+		cb_warning_x (CB_VALUE (w->items), _("'%s' previously defined here"), w->name);
+	}
 }
 
 void
