@@ -1,3 +1,9 @@
+2006-11-06  Roger While <simrw@sim-basis.de>
+
+	* tree.h, typeck.c, error.c, field.c :
+	  Fix incorrect line number on redefinition warning
+	  Fix abort when ASSIGN data name duplicates SELECT name
+
 2006-10-25  Roger While <simrw@sim-basis.de>
 
 	* parser.y : Allow COBOL standard of INSPECT REPLACING
